--- a/source/assets/stylesheets/objects.scss
+++ b/source/assets/stylesheets/objects.scss
@@ -51,6 +51,8 @@
       list-style:none;
       position:relative;
       right:50%;
+      margin-left: 0;
+      margin-right: 1rem;
     }
   }
 }
